# ai-research-keyphrase-extraction

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  build.py  config.ini.template  launch.py  pyproject.toml  requirements.txt  setup.py
embeddings/: emb_distrib_interface.py  emb_distrib_local.py
model/: extractor.py  input_representation.py  method.py  methods_embeddings.py
preprocessing/: custom_stanford.py  postagging.py
swisscom_ai/research_keyphrase/embeddings/: emb_distrib_doc2vec.py  emb_distrib_interface.py  emb_distrib_local.py  emb_distrib_sentencetransformers.py
swisscom_ai/research_keyphrase/model/: extractor.py  input_representation.py  method.py  methods_embeddings.py
swisscom_ai/research_keyphrase/preprocessing/: custom_stanford.py  postagging.py
swisscom_ai/research_keyphrase/util/: fileIO.py  solr_fields.py
tests/: test_embeddings.py
util/: solr_fields.py
