[tool.poetry]
name = "ai-research-keyphrase-extraction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
packages = [{ include = "swisscom_ai" }]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
langdetect = "1.0.7"
nltk = "^3.7"
numpy = "^1.23.1"
scikit-learn = "^1.1.2"
requests = "^2.28.1"

Cython = "^0.29.14"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
